2008-02-28  Jürg Billeter  <j@bitron.ch>

	* doc/vala/default.css: set background-color

2008-02-28  Jürg Billeter  <j@bitron.ch>

	* tests/Makefile.am, tests/delegates.exp, tests/delegates.vala,
	  tests/expressions-lambda.exp, tests/expressions-lambda.vala:
	  combine and rename some tests

2008-02-28  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegeneratormethod.vala: fix instance delegate handling
	  for virtual method wrappers

2008-02-26  Jürg Billeter  <j@bitron.ch>

	* doc/vala/Makefile.am: define NULL,
	  patch by Cyril Soldani, fixes bug 518791

2008-02-26  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala, vala/valanulltype.vala,
	  vala/valasemanticanalyzer.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala: fix
	  assigning to delegate fields and variables

2008-02-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecompiler.vala, compiler/valacompiler.vala:
	  remove non-portable -O commandline option, fixes bug 518660

2008-02-26  Jürg Billeter  <j@bitron.ch>

	* gee/hashset.vala: fix iterator, patch by Ali Sabil

2008-02-26  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_test_init binding

2008-02-25  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/valadelegate.vala, vala/valainterfacewriter.vala: write and
	  process cheader_filename CCode attribute parameter for delegates
	* vapi/gio-2.0.vapi: regenerated

2008-02-25  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: always write abstract and virtual
	  methods

2008-02-24  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala: support main function in root namespace,
	  fixes bug 516950

2008-02-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valaccodegenerator.vala:
	  fix crash when using delegates as properties, fixes bug 517499

2008-02-24  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/vala.h, vala/valasymbolresolver.vala,
	  vala/valaunresolvedsymbol.vala, vala/valaunresolvedtype.vala: