@@ -1,5 +1,11 @@
 2008-02-28  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodeassignmentbinding.vala,
+	  gobject/valaccodegenerator.vala: support instance delegate fields,
+	  fixes bug 519231
+
+2008-02-28  Jürg Billeter  <j@bitron.ch>
+
 	* doc/vala/default.css: set background-color
 
 2008-02-28  Jürg Billeter  <j@bitron.ch>
